--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "parcel build index.html",
     "start": "parcel index.html",
     "watch": "parcel watch index.html"
   },
@@ -14,8 +15,9 @@
     "lodash": "^4.17.15"
   },
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "pluralize": "^8.0.0",
-    "syllable": "^3.6.1",
-    "sass": "^1.22.9"
+    "sass": "^1.22.9",
+    "syllable": "^3.6.1"
   }
 }
