--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "parcel build index.html",
+    "build": "parcel build index.html --public-url ./gyroidbot/",
     "start": "parcel index.html",
     "watch": "parcel watch index.html"
   },
