--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.4.2",
-    "lodash": "^4.17.15"
+    "dotenv": "^8.0.0",
+    "lodash": "^4.17.15",
+    "puppeteer": "^1.19.0",
+    "semistandard": "^13.0.1",
+    "twit": "^2.2.11"
   },
   "devDependencies": {
     "cssnano": "^4.1.10",
     "pluralize": "^8.0.0",
+    "prettier": "1.18.2",
     "sass": "^1.22.9",
     "syllable": "^3.6.1"
   }
